force-app/main/default/objects/Payroll_Export_Line__c/Payroll_Export_Line__c.object-meta.xml
<CustomObject>
    <description>Individual line item within a payroll export representing a participant's net payable commission.</description>
    <label>Payroll Export Line</label>
    <nameField>
        <displayFormat>PEL-{00000}</displayFormat>
        <label>Payroll Export Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Export Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>