force-app/main/default/objects/Payroll_Export_Line__c/fields/Adjustment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Notes__c</fullName>
    <label>Adjustment Notes</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>