force-app/main/default/objects/Payroll_Export_Line__c/fields/Calculation_Ids__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Ids__c</fullName>
    <label>Calculation Ids</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>