force-app/main/default/objects/Payroll_Export_Line__c/fields/Clawback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Clawback_Amount__c</fullName>
    <label>Clawback Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>