force-app/main/default/objects/Payroll_Export_Line__c/fields/Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan__c</fullName>
    <label>Comp Plan</label>
    <type>Lookup</type>
    <referenceTo>Comp_Plan__c</referenceTo>
    <relationshipLabel>Payroll Lines</relationshipLabel>
    <relationshipName>Payroll_Lines_Plan</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>