force-app/main/default/objects/Payroll_Export_Line__c/fields/Draw_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Draw_Recovery__c</fullName>
    <label>Draw Recovery</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>