force-app/main/default/objects/Payroll_Export_Line__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <label>Employee Id</label>
    <type>Text</type>
    <length>50</length>
</CustomField>