force-app/main/default/objects/Payroll_Export_Line__c/fields/Gross_Commission__c.field-meta.xml
<CustomField>
    <fullName>Gross_Commission__c</fullName>
    <label>Gross Commission</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>