force-app/main/default/objects/Payroll_Export_Line__c/fields/Hold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hold_Amount__c</fullName>
    <label>Hold Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>