force-app/main/default/objects/Payroll_Export_Line__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Payroll Lines</relationshipLabel>
    <relationshipName>Payroll_Lines</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>