force-app/main/default/objects/Payroll_Export_Line__c/fields/Payroll_Export__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Export__c</fullName>
    <label>Payroll Export</label>
    <referenceTo>Payroll_Export__c</referenceTo>
    <relationshipLabel>Export Lines</relationshipLabel>
    <relationshipName>Export_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>