force-app/main/default/objects/Payroll_Export_Line__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Included</fullName><default>false</default><label>Included</label></value>
            <value><fullName>Excluded</fullName><default>false</default><label>Excluded</label></value>
            <value><fullName>Adjusted</fullName><default>false</default><label>Adjusted</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>